--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,5 @@ markdown: kramdown
 highlighter: pygments
 permalink: pretty
 paginate: 3
+paginate_path: "/page:num/"
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
